AUGREL/src/objects/SfTask__x.object
<CustomObject>
    <description>SfTask</description>
    <externalDataSource>ODataService</externalDataSource>
    <externalName>SfTask</externalName>
    <fields>
        <fullName>activityDate__c</fullName>
        <description>activityDate</description>
        <externalDeveloperName>activityDate</externalDeveloperName>
        <label>activityDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>collAccountNumber__c</fullName>
        <description>collAccountNumber</description>
        <externalDeveloperName>collAccountNumber</externalDeveloperName>
        <label>collAccountNumber</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>collActyBalance__c</fullName>
        <description>collActyBalance</description>
        <externalDeveloperName>collActyBalance</externalDeveloperName>
        <label>collActyBalance</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>collActyCode__c</fullName>
        <description>collActyCode</description>
        <externalDeveloperName>collActyCode</externalDeveloperName>
        <label>collActyCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>collActyDateTime__c</fullName>
        <description>collActyDateTime</description>
        <externalDeveloperName>collActyDateTime</externalDeveloperName>
        <label>collActyDateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>collActyPromiseAmt1__c</fullName>
        <description>collActyPromiseAmt1</description>
        <externalDeveloperName>collActyPromiseAmt1</externalDeveloperName>
        <label>collActyPromiseAmt1</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>collActyPromiseAmt2__c</fullName>
        <description>collActyPromiseAmt2</description>
        <externalDeveloperName>collActyPromiseAmt2</externalDeveloperName>
        <label>collActyPromiseAmt2</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>collActyPromiseDate1__c</fullName>
        <description>collActyPromiseDate1</description>
        <externalDeveloperName>collActyPromiseDate1</externalDeveloperName>
        <label>collActyPromiseDate1</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>collActyPromiseDate2__c</fullName>
        <description>collActyPromiseDate2</description>
        <externalDeveloperName>collActyPromiseDate2</externalDeveloperName>
        <label>collActyPromiseDate2</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>collActyReviewDate__c</fullName>
        <description>collActyReviewDate</description>
        <externalDeveloperName>collActyReviewDate</externalDeveloperName>
        <label>collActyReviewDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>collRecommendedPassStgy__c</fullName>
        <description>collRecommendedPassStgy</description>
        <externalDeveloperName>collRecommendedPassStgy</externalDeveloperName>
        <label>collRecommendedPassStgy</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>collUserId__c</fullName>
        <description>collUserId</description>
        <externalDeveloperName>collUserId</externalDeveloperName>
        <label>collUserId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>createdById__c</fullName>
        <description>createdById</description>
        <externalDeveloperName>createdById</externalDeveloperName>
        <label>createdById</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>createdDate__c</fullName>
        <description>createdDate</description>
        <externalDeveloperName>createdDate</externalDeveloperName>
        <label>createdDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>currentMileage__c</fullName>
        <description>currentMileage</description>
        <externalDeveloperName>currentMileage</externalDeveloperName>
        <label>currentMileage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>description__c</fullName>
        <description>description</description>
        <externalDeveloperName>description</externalDeveloperName>
        <label>description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>faId__c</fullName>
        <description>faId</description>
        <externalDeveloperName>faId</externalDeveloperName>
        <label>faId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>financialAccountNumber__c</fullName>
        <description>financialAccountNumber</description>
        <externalDeveloperName>financialAccountNumber</externalDeveloperName>
        <label>financialAccountNumber</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isArchived__c</fullName>
        <description>isArchived</description>
        <externalDeveloperName>isArchived</externalDeveloperName>
        <label>isArchived</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>isClosed__c</fullName>
        <description>isClosed</description>
        <externalDeveloperName>isClosed</externalDeveloperName>
        <label>isClosed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>lastModifiedById__c</fullName>
        <description>lastModifiedById</description>
        <externalDeveloperName>lastModifiedById</externalDeveloperName>
        <label>lastModifiedById</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>lastModifiedDate__c</fullName>
        <description>lastModifiedDate</description>
        <externalDeveloperName>lastModifiedDate</externalDeveloperName>
        <label>lastModifiedDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ownerId__c</fullName>
        <description>ownerId</description>
        <externalDeveloperName>ownerId</externalDeveloperName>
        <label>ownerId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>priority__c</fullName>
        <description>priority</description>
        <externalDeveloperName>priority</externalDeveloperName>
        <label>priority</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sourceCreatedBy__c</fullName>
        <description>sourceCreatedBy</description>
        <externalDeveloperName>sourceCreatedBy</externalDeveloperName>
        <label>sourceCreatedBy</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sourceCreatedDate__c</fullName>
        <description>sourceCreatedDate</description>
        <externalDeveloperName>sourceCreatedDate</externalDeveloperName>
        <label>sourceCreatedDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>sourceSystemCreatedBy__c</fullName>
        <description>sourceSystemCreatedBy</description>
        <externalDeveloperName>sourceSystemCreatedBy</externalDeveloperName>
        <label>sourceSystemCreatedBy</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>subject__c</fullName>
        <description>subject</description>
        <externalDeveloperName>subject</externalDeveloperName>
        <label>subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>systemModStamp__c</fullName>
        <description>systemModStamp</description>
        <externalDeveloperName>systemModStamp</externalDeveloperName>
        <label>systemModStamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>taskId__c</fullName>
        <description>taskId</description>
        <externalDeveloperName>taskId</externalDeveloperName>
        <label>taskId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>taskStatus__c</fullName>
        <description>taskStatus</description>
        <externalDeveloperName>taskStatus</externalDeveloperName>
        <label>taskStatus</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>SfTask</label>
    <pluralLabel>SfTask</pluralLabel>
</CustomObject>